[package]
name = "oxidation"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.167"
ptr = "0.2.3"


[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory"
]

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory","Win32_System_Diagnostics","Win32_System_Diagnostics_Debug"

]
